2008-02-28  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Ide.addin.xml: Added missing keyboard shortcut.

2008-02-28  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Ide.Gui.Pads.ProjectPad/SystemFileNodeBuilder.cs: Fixed
	  duplicate error string. 

2008-02-27  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Ide.ExternalTools/ExternalToolPanel.cs: Fixed wrong string.

2008-02-27  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Ide.Gui/MonoDevelopStatusBar.cs: removed debug message.

2008-02-27  Mike Krüger <mkrueger@novell.com> 

	

2008-02-27  Mike Krüger <mkrueger@novell.com> 

	* gtk-gui/gui.stetic: Removed documentswitcher window title.

2008-02-27  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Ide.Gui.OptionPanels/IDEStyleOptionsPanel.cs,
	  MonoDevelop.Ide.Gui.OptionPanels/SelectStylePanel.cs,
	  MonoDevelop.Ide.addin.xml, MonoDevelop.Ide.mdp,
	  MonoDevelop.Ide.WindowSwitcher/WindowSwitcher.cs,
	  gtk-gui/MonoDevelop.Ide.Gui.OptionPanels.IDEStyleOptionsPanelWidget.cs,
	  gtk-gui/gui.stetic, gtk-gui/MonoDevelop.Ide.DocumentSwitcher.cs,
	  gtk-gui/MonoDevelop.Ide.WindowSwitcher.cs,
	  gtk-gui/MonoDevelop.Ide.Gui.OptionPanels.SelectStylePanelWidget.cs,
	  Makefile.am, MonoDevelop.Ide.Gui/DefaultWorkbench.cs,
	  MonoDevelop.Ide.Gui/DocumentSwitcher.cs: Added an option to turn of the
	  new document switcher. Redone the SelectStylePanel.

2008-02-27  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Ide.Dom.Output/Ambience.cs,
	  MonoDevelop.Ide.WindowSwitcher/WindowSwitcher.cs,
	  gtk-gui/MonoDevelop.Ide.Gui.Dialogs.TipOfTheDayWindow.cs,
	  gtk-gui/MonoDevelop.Ide.WindowSwitcher.cs,
	  MonoDevelop.Ide.Gui/Workbench.cs,
	  MonoDevelop.Ide.Gui/IWorkbenchWindow.cs,
	  MonoDevelop.Ide.Gui/SdiWorkspaceWindow.cs,
	  MonoDevelop.Ide.Gui/DefaultWorkbench.cs: Worked on document switcher
	  (Ctrl+Tab).

2008-02-27  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Ide.mdp, gtk-gui/gui.stetic,