@@ -648,68 +648,5 @@ namespace MonoDevelop.Ide.Gui
 		}
 		#endregion
 		
-		#region Splitting
-		[CommandUpdateHandler (WindowCommands.SplitWindowHorizontally)]
-		protected void UpdateSplitWindowHorizontally (CommandInfo info)
-		{
-			ISplittable split = GetContent <ISplittable> ();
-			info.Enabled = split != null && split.EnableSplitHorizontally;
-		}
-		[CommandHandler (WindowCommands.SplitWindowHorizontally)]
-		public void SplitWindowHorizontally ()
-		{
-			ISplittable split = GetContent <ISplittable> ();
-			Debug.Assert (split != null);
-			split.SplitHorizontally ();
-		}
-
-		[CommandUpdateHandler (WindowCommands.SplitWindowVertically)]
-		protected void UpdateSplitWindowVertically (CommandInfo info)
-		{
-			ISplittable split = GetContent <ISplittable> ();
-			info.Enabled = split != null && split.EnableSplitVertically;
-		}
-		[CommandHandler (WindowCommands.SplitWindowVertically)]
-		public void SplitWindowVertically ()
-		{
-			ISplittable split = GetContent <ISplittable> ();
-			Debug.Assert (split != null);
-			split.SplitVertically ();
-		}
-
-		[CommandUpdateHandler (WindowCommands.UnsplitWindow)]
-		protected void UpdateUnsplitWindow (CommandInfo info)
-		{
-			ISplittable split = GetContent <ISplittable> ();
-			info.Enabled = split != null && split.EnableUnsplit;
-		}
-		[CommandHandler (WindowCommands.UnsplitWindow)]
-		public void UnsplitWindow ()
-		{
-			ISplittable split = GetContent <ISplittable> ();
-			Debug.Assert (split != null);
-			split.Unsplit ();
-		}
-		#endregion
-		
-		#region Printing
-		[CommandUpdateHandler (FileCommands.PrintDocument)]
-		[CommandUpdateHandler (FileCommands.PrintPreviewDocument)]
-		protected void UpdatePrintCommands (CommandInfo info)
-		{
-			info.Enabled = GetContent <IPrintable> () != null;
-		}
-		[CommandHandler (FileCommands.PrintDocument)]
-		public void PrintDocument ()
-		{
-			GetContent <IPrintable> ().PrintDocument ();
-		}
-		[CommandHandler (FileCommands.PrintPreviewDocument)]
-		public void PrintPreviewDocument ()
-		{
-			GetContent <IPrintable> ().PrintPreviewDocument ();
-		}
-		#endregion
-		
 	}
 }
